# rustplot

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASENOTES.md  matplotlib_python_file.py  shell.nix
.github/workflows/: rust.yml
src/: array_plot.rs  lib.rs
src/helper/: arrays.rs  axes.rs  charset.rs  file.rs  func_plot_domain.rs  func_plot_range_finder.rs  funtion_plot_range_finding.py  image.rs  mat_plot_lib.rs  math.rs  mod.rs  rendering.rs  v1.py  v2.py  v3.py  v4.py  v5.py  v6.py  v7.py
src/plots/: animation_plot.rs  array_plot.rs  func_plot.rs  function_plot.rs  image_plot.rs  line_plot.rs  mod.rs  region_plot.rs  reigon_plot.rs  scatter_plot.rs  vector_plot.rs
src/tests/: mod.rs  test_animation_plot.rs  test_array_plot.rs  test_arrays.rs  test_axes.rs  test_func_plot.rs  test_func_plot_domain.rs  test_func_plot_range_finder.rs  test_function_plot.rs  test_image_plot.rs  test_line_plot.rs  test_mat_plot_lib.rs  test_math.rs  test_region_plot.rs  test_reigon_plot.rs  test_save_and_image.rs  test_scatter_plot.rs
tests/: test.rs
