[package]
name = "cgrustplot"
version = "1.1.6"
authors = ["Christopherfrommaine <christopherfrommaine@gmail.com>"]
edition = "2021"
description = "Plotting util for rust"
readme = "README.md"
repository = "https://github.com/Christopherfrommaine/rustplot"
license = "MIT"
keywords = ["plotting", "graphing"]


[dependencies]
num = "0.4.3"
image = "0.25.6"
rand = "0.9.0"
log = "0.4.27"
