[package]
name = "cgrustplot"
version = "1.2.0"
authors = ["Christopherfrommaine <christopherfrommaine@gmail.com>"]
edition = "2021"
description = "Plotting utility for Rust, with a variety of plot types and capabilities."
readme = "README.md"
repository = "https://github.com/Christopherfrommaine/rustplot"
license = "MIT"
keywords = ["plot", "plotting", "graph", "graphing", "visualization"]

[dependencies]
num = "0.4.3"
image = "0.25.6"
rand = "0.9.0"
log = "0.4.27"
rayon = "1.10.0"
